fix timeline overlap

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -2176,7 +2176,7 @@ form[name='compose'] {
 
 .timeline {
   position: relative;
-  margin: 0 auto 10px;
+  margin: 0 10px 15px 0;
 
   .line, .duration {
     position: absolute;
